--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Como usar GitHub e Git</h1>
-    
+     <p>O Git é um software, o GitHub é uma plataforma para compartilhar os projetos.</p>
 </body>
 </html>
